--- a/src/app/components/classe/profil-eleve/profil-eleve.component.html
+++ b/src/app/components/classe/profil-eleve/profil-eleve.component.html
@@ -203,6 +203,27 @@
     </div>
 
     <div class="photo">
+      <div class="pop">
+        <input type="checkbox" id="toggle4">
+        <label for="toggle4" class=" btn-primary mod"> <i class="pi pi-fw pi-pencil"></i></label>
+
+        <dialog>
+          <form class="row g-3" #addForms="ngForm" (ngSubmit)="addImage(addForms)">
+            <div class="col-12">
+              <label for="toggle4" class="close">X </label>
+            </div>            
+            <label for="img">
+              Image
+          </label>
+          <input id="img" type="file" (change)="onFileChanged2($event)">
+            <div class="col-sm-12">
+              <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+
+          </form>
+        </dialog>
+      </div>
+      <img  *ngFor="let img of eleve.galleries" src="data:image/jpg;base64,{{img.picByte}}">
     </div>
   </div>
 
