--- a/src/app/components/classe/profil-eleve/profil-eleve.component.scss
+++ b/src/app/components/classe/profil-eleve/profil-eleve.component.scss
@@ -102,6 +102,19 @@ line-height: 30px;
 #toggle3:checked ~ dialog {
   display: block;
 }
+
+#toggle4{
+  visibility: hidden;
+  opacity: 0;
+  position: relative;
+  z-index: 99;
+}
+
+
+#toggle4:checked ~ dialog {
+  display: block;
+  z-index: 99;
+}
 label{ 
   border-radius: 4px;}
 .add{
