--- a/src/app/components/paiement/paiement.component.html
+++ b/src/app/components/paiement/paiement.component.html
@@ -34,7 +34,7 @@
                     </td>
                     <td class="lis">
                       <input type="checkbox" id="toggle3" class="paiement">
-                      <label for="toggle3" class=" btn btn-primary evaluer">
+                      <label for="toggle3" class=" btn btn-primary evaluer" (click)="setEleve(e)">
                       Add Paiement </label>
                       <dialog>
                         <!--start-->
@@ -56,7 +56,7 @@
                             <input type="number" name="montent" [(ngModel)]="facture.montent" class="form-control" id="montant" placeholder="Montant" required>
                           </div>
                           <div class="col-sm-12">
-                            <button type="submit" class="btn btn-primary" (click)="addMontant(e)">Save</button>
+                            <button type="submit" class="btn btn-primary" (click)="addMontant()">Save</button>
                           </div>
                         </form>
                       </dialog>
