--- a/src/app/components/classe/liste-eleve/liste-eleve.component.html
+++ b/src/app/components/classe/liste-eleve/liste-eleve.component.html
@@ -109,8 +109,8 @@
                 style="text-decoration: none; color: black; font-size: 22px;">{{p.nom}} </a>
 
               <div class="dang">
-                <button class="btn btn-danger" (click)="onDeleteEleve(p.idEleve)" title="Delete">
-                  <i class="fa fa-trash"></i></button>
+             
+                  <i class="fa fa-trash" style="color: white;" (click)="onDeleteEleve(p.idEleve)"></i>
               </div>
 
             </td>
@@ -126,15 +126,16 @@
   <div class="two">
     <h1 className="title">Liste de présence</h1>
 
-    <table>
+    <table >
+      
       <div class="thead" >
 
 
-        <tr>
-          <th>Nom</th>
-          <th>Etat</th>
+        <tr >
+          <th >Nom</th>
+         
           
-          <th *ngFor="let day of week"> {{ day }}</th>
+          <th *ngFor="let day of week" > {{ day }}</th>
         </tr>
 
 
@@ -156,7 +157,7 @@
             <td> <input type="checkbox" [checked]="p.select"></td>
             <td> <input type="checkbox" [checked]="p.select"></td-->
             <td *ngFor="let day of week"><select name="eleves" (change)="presenceClick(p,$event,day)">
-                <option selected value="" disabled>select etat {{day}}</option>
+                <option selected value="" disabled>select etat </option>
                 <option value="true">present</option>
                 <option value="false">absent</option>
               </select> </td>
@@ -181,7 +182,43 @@
 
         </table>
       </div>
+<!--tabV2-->
+<div class="tbl-content">
 
+  <table>
+
+      <tr *ngFor="let p of classeInput?.eleves">
+        <td style="font-size: 22px;">{{p.nom}}</td>
+        <!--td> <input type="checkbox" [checked]="p.select"></td> 
+        <td> <input type="checkbox" [checked]="p.select"></td>
+        <td> <input type="checkbox" [checked]="p.select"></td>
+        <td> <input type="checkbox" [checked]="p.select"></td>
+        <td> <input type="checkbox" [checked]="p.select"></td>
+        <td> <input type="checkbox" [checked]="p.select"></td-->
+        <td *ngFor="let elem of p.weekPresence">
+          <input type="checkbox" [checked]="elem.etat" (click)="changeEtatPresence(elem,$event)">  
+        </td>
+        <td>
+          <div class="pop">
+            <input type="checkbox" id="toggle2">
+
+
+            <label for="toggle2" class="view" (click)="getPresences(p)"><li class="pi pi-search" style="color: white;"></li></label>
+
+            <dialog>
+
+              <p *ngFor="let p of presences">{{p.etat?'Present':'absent'}} {{p.datePE}}</p>
+              <div class="col-12">
+                <label for="toggle2">close </label>
+              </div>
+            </dialog>
+          </div>
+        </td>
+      </tr>
+
+
+    </table>
+  </div>
 
    
 
