--- a/src/app/components/classe/classe.component.html
+++ b/src/app/components/classe/classe.component.html
@@ -1,56 +1,42 @@
 <app-dashboard></app-dashboard>
 
- <div class="area" >
-  <ul class="circles">
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-  </ul>
-</div >
-
-
-
 
 
 <div class="cl">
 
-  <input type="checkbox" id="toggle">
-<label class="add" for="toggle" style="margin-left: 50px; width: 3%; height: 5%;">Add</label>
-
-<dialog >
-  <form #addForms="ngForm" (ngSubmit)="onAddCLasse(addForms)">
-    <div class="form-group row">
-        <label for="nom"   class="col-sm-2 col-form-label">nom</label>
-        <div class="col-sm-10">
-          <input type="text" ngModel name="nom" class="form-control" id="nom" placeholder="nom" required>
-        </div>
-    </div>
-    <div class="btnn">
-      <button [disabled]="addForms.invalid" type="submit" class="btn btn-primary">Save</button>
-
-    <label for="toggle" >close</label>
-    </div>
-  </form>
-    
-  
-</dialog>
-
-  
     <div class="row">
+      <input type="checkbox" id="toggle">
+      <label class="btn btn-primary add" for="toggle" style="margin-left: 50px; width: 3%; height: 5%;">Add</label>
+      
+      <dialog >
+        <label for="toggle" style="color: black;">X</label>
+        <form #addForms="ngForm" (ngSubmit)="onAddCLasse(addForms)">
+          <div class="form-group row">
+              <label for="nom"   class="col-sm-2 col-form-label">nom</label>
+              <div class="col-sm-10">
+                <input type="text" ngModel name="nom" class="form-control" id="nom" placeholder="nom" required>
+              </div>
+          </div>
+          <div class="btnn">
+            <button [disabled]="addForms.invalid" type="submit" class="btn btn-primary">Save</button>
+      
+     
+          </div>
+        </form>
+          
+        
+      </dialog>s
       <div class="col-sm-3" *ngFor="let c of classee">
         <div class="classe" >
+          
         <div class="card bg-light mb-3" >
           
           <div class="card-body">
-            <a class="card-title" [routerLink]="['/liste',c.idClasse]" (click)="ongetEleveByClasse(c.idClasse)">{{c.nom}}</a>
-          </div>
+            <a class="card-title" [routerLink]="['/liste',c.idClasse]" (click)="ongetEleveByClasse(c.idClasse)">
+              <p>{{c.nom}}</p>
+            </a>
+              <i class="fa fa-trash" style="color: black; text-align: center;" (click)="onDeleteClasse(c.idClasse)"></i>
+       
         </div>
         <!-- row 2-->
   
