--- a/src/app/components/classe/activite/activite.component.html
+++ b/src/app/components/classe/activite/activite.component.html
@@ -26,7 +26,7 @@
           <input type="hidden" name="idActivite" [(ngModel)]="event.idActivite">
           <div class="col-sm-6 ">
               <label for="Salle">Salle</label>
-              <input type="Salle" name="Salle" class="form-control" id="Salle" placeholder="Salle" required ngModel>
+              <input type="text" name="salle" class="form-control" id="Salle" placeholder="Salle" required [(ngModel)]="emploi.salle">
             </div>
             <div class="col-sm-6 ">
               <label for="Horaire">Horaire </label>
