--- a/src/app/components/classe/activite/activite.component.html
+++ b/src/app/components/classe/activite/activite.component.html
@@ -10,12 +10,8 @@
 
           <div class="col-sm-6 ">
               <label for="exampleFormControlSelect1">Personnels</label>
-              <select class="form-control" id="exampleFormControlSelect1">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
+              <select class="form-control" id="exampleFormControlSelect1" name="fk_emploi2" [(ngModel)]="emploi.fk_emploi2">
+                <option *ngFor="let emp of employees" [ngValue]="emp">{{emp.nom}}</option>
               </select>
               
            
