--- a/src/app/components/employe/liste-employe/liste-employe.component.html
+++ b/src/app/components/employe/liste-employe/liste-employe.component.html
@@ -14,35 +14,35 @@
       <div class="form-group row">
         <label for="nom" class="col-sm-2 col-form-label">nom</label>
         <div class="col-sm-10">
-          <input type="text" ngModel name="nom" class="form-control" id="nom" placeholder="nom" required>
+          <input type="text" ngModel name="nom" class="form-control" id="nom" placeholder="nom" required >
         </div>
       </div>
   
       <div class="form-group row">
         <label for="prenom" class="col-sm-2 col-form-label">prenom</label>
         <div class="col-sm-10">
-          <input type="text" ngModel name="prenom" class="form-control" id="prenom" placeholder="prenom" required>
+          <input type="text" ngModel name="prenom" class="form-control" id="prenom" placeholder="prenom" required >
         </div>
       </div>
   
       <div class="form-group row">
         <label for="cin" class="col-sm-2 col-form-label">cin</label>
         <div class="col-sm-10">
-          <input type="text" ngModel name="cin" class="form-control" id="cin" placeholder="cin" required>
+          <input type="text" ngModel name="cin" class="form-control" id="cin" placeholder="cin" required >
         </div>
       </div>
   
       <div class="form-group row">
         <label for="fonction" class="col-sm-2 col-form-label">fonction</label>
         <div class="col-sm-10">
-          <input type="text" ngModel name="fonction" class="form-control" id="fonction" placeholder="fonction" required>
+          <input type="text" ngModel name="fonction" class="form-control" id="fonction" placeholder="fonction" required >
         </div>
       </div>
   
       <div class="form-group row">
         <label for="mail" class="col-sm-2 col-form-label">mail</label>
         <div class="col-sm-10">
-          <input type="text" ngModel name="mail" class="form-control" id="mail" placeholder="mail" required>
+          <input type="text" ngModel name="mail" class="form-control" id="mail" placeholder="mail" required >
         </div>
       </div>
   
@@ -50,7 +50,7 @@
         <label for="nb_jour_initiale" class="col-sm-2 col-form-label">jours conges</label>
         <div class="col-sm-10">
           <input type="text" ngModel name="nb_jour_initiale" class="form-control" id="nb_jour_initiale"
-            placeholder="nb_jour_initiale" required>
+            placeholder="nb_jour_initiale" required >
         </div>
       </div>
   <!--
@@ -74,7 +74,7 @@
         <label for="salaire_de_base" class="col-sm-2 col-form-label">salaire</label>
         <div class="col-sm-10">
           <input type="text" ngModel name="salaire_de_base" class="form-control" id="salaire_de_base"
-            placeholder="salaire_de_base" required>
+            placeholder="salaire_de_base" required >
         </div>
       </div>
   
@@ -82,18 +82,18 @@
       <div class="form-group row">
         <label for="tel" class="col-sm-3 col-form-label">Numero de telephone</label>
         <div class="col-sm-9">
-          <input type="text" ngModel name="tel" class="form-control" id="tel" placeholder="tel" required>
+          <input type="text" ngModel name="tel" class="form-control" id="tel" placeholder="tel" required >
         </div>
       </div>
   
-  
+      <input id="img" type="file" (change)="onFileChanged($event)">
   
    <div class="btn">
-    <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Save changes</button>
+    <button type="submit" class="btn btn-primary">Save changes</button>
     <label for="toggle" class="close">close overlay</label>
    </div>
     </form>
-    <!--end-->
+    <!--end[disabled]="addForm.invalid" -->
   
   
     
@@ -106,7 +106,8 @@
     <div class="col-sm-4" *ngFor="let e of employe">
      
       <div class="card bg-light mb-3" style="max-width: 20rem;">
-        <img   class="image" src="assets/empl.png">
+        
+        <img class="image" [src]="'data:image/jpg;base64,'+e.img">
         <div class="card-body">
           <a class="card-title" [routerLink]="['/profilemp',e.idPersonnel]">{{ e.nom }} {{ e.prenom }} </a>
           <div class="footer">
